--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -4,11 +4,10 @@
     discarded or duplicated and whose type changes over time, as input/output
     operations are performed on them.
     %
-    Context splitting, the ``naive'' channel management technique directly
-    related to the way session type theories are usually written with pen and
-    paper, is often considered a hindrance and a notable source of complexity,
-    to the point that several alternative approaches have been recently
-    proposed.
+    Context splitting, the channel management technique directly related to the
+    way session type theories are usually written with pen and paper, is often
+    considered a hindrance and a notable source of complexity, to the point that
+    several alternative approaches have been recently proposed.
     %
     In this paper we describe the Agda formalisation of a process calculus based
     on classical linear logic that supports the modeling of binary sessions
