--- a/paper/Examples.tex
+++ b/paper/Examples.tex
@@ -218,7 +218,7 @@ Using these higher-order forms, it is easy to define the usual boolean
 connectives.
 
 \begin{code}%
-\>[0]\AgdaOperator{\AgdaFunction{!!\AgdaUnderscore{}}}\AgdaSpace{}%
+\>[0]\AgdaFunction{!!}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Proc}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{[}}\AgdaSpace{}%
@@ -230,7 +230,7 @@ connectives.
 \AgdaFunction{𝔹}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\<%
 \\
-\>[0]\AgdaOperator{\AgdaFunction{!!\AgdaUnderscore{}}}\AgdaSpace{}%
+\>[0]\AgdaFunction{!!}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{curry∗}\AgdaSpace{}%
@@ -281,12 +281,12 @@ connectives.
 \\
 %
 \>[12]\AgdaOperator{\AgdaFunction{If}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{curry∗}\AgdaSpace{}%
+\AgdaFunction{curry∗}\AgdaSpace{}%
 \AgdaInductiveConstructor{link}\AgdaSpace{}%
 \AgdaInductiveConstructor{ch}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaFunction{≫}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaInductiveConstructor{ch}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaInductiveConstructor{ch}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{Else}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{Drop}\AgdaSpace{}%
 \AgdaFunction{False}\AgdaSymbol{)}\<%
@@ -294,26 +294,27 @@ connectives.
 \>[0]\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{||}}\AgdaSpace{}%
 \AgdaBound{B}%
-\>[9]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{!!}}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaOperator{\AgdaFunction{!!}}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\>[9]\AgdaSymbol{=}%
+\>[12]\AgdaFunction{!!}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{!!}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\&\&}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{!!}}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{))}\<%
+\AgdaFunction{!!}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\<%
 \end{code}
 
 The function \AgdaFunction{\$} (defined in Agda's standard library) is just a
-visible function application operator. We use it as a ``separator'' so that we
-can flatten deeply nested expressions and save a bunch of parentheses.
+low-precedence, visible function application operator. We use it as a separator
+to flatten deeply nested expressions and save a bunch of parentheses.
 %
-We have chosen to define the disjunction \AgdaFunction{||} from the conjunction
-\AgdaFunction{\&\&} and negation \AgdaFunction{!!} using De Morgan's laws.
+For the sake of illustration, we have chosen to define the disjunction
+\AgdaFunction{||} from the conjunction \AgdaFunction{\&\&} and negation
+\AgdaFunction{!!} using De Morgan's laws.
 
-If we wish to test our definitions, we can implement a simple evaluator using
-the deadlock freedom property. We have not proved a termination result, but
-since linear logic enjoys cut elimination we can safely annotate the evaluator
-as terminating.
+To test our definitions we implement a simple evaluator using the deadlock
+freedom property. We have not proved a termination result, but since linear
+logic enjoys cut elimination we can safely annotate the evaluator as
+terminating.
 
 \begin{code}%
 \>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
@@ -385,9 +386,9 @@ encoding its type $\OfCourse(\forall\X.\dual\X \Par (X \Ten \One))$:
 \AgdaInductiveConstructor{𝟙}\AgdaSymbol{)))}\<%
 \end{code}
 
-The notation $\AgdaFunction{\#}~n$ is defined in Agda's standard library and
-creates an element of \AgdaDatatype{Fin} from the natural number $n$. Here it is
-used to create the de Bruijn index of the type variable $X$.
+The notation $\AgdaFunction{\#}~n$ (defined in Agda's standard library) creates
+an element of \AgdaDatatype{Fin} from the natural number $n$. Here it is used to
+create the de Bruijn index of the type variable $X$.
 %
 We now encode the server
 \begin{code}%
@@ -400,7 +401,7 @@ We now encode the server
 \\
 \>[0]\AgdaFunction{Server}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[243I]\AgdaFunction{curry}\AgdaSpace{}%
+\>[242I]\AgdaFunction{curry}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{curry∗}\AgdaSpace{}%
 \AgdaInductiveConstructor{server}\AgdaSpace{}%
 \AgdaInductiveConstructor{ch}\AgdaSpace{}%
@@ -409,7 +410,7 @@ We now encode the server
 \AgdaInductiveConstructor{un-[]}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\$}}\<%
 \\
-\>[.][@{}l@{}]\<[243I]%
+\>[.][@{}l@{}]\<[242I]%
 \>[9]\AgdaFunction{curry∗}\AgdaSpace{}%
 \AgdaInductiveConstructor{all}\AgdaSpace{}%
 \AgdaInductiveConstructor{ch}\AgdaSpace{}%
@@ -463,14 +464,14 @@ and the client that sends true to it
 \\
 \>[0]\AgdaFunction{Client}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[288I]\AgdaFunction{curry∗}\AgdaSpace{}%
+\>[287I]\AgdaFunction{curry∗}\AgdaSpace{}%
 \AgdaInductiveConstructor{client}\AgdaSpace{}%
 \AgdaInductiveConstructor{ch}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaFunction{≫}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\$}}\<%
 \\
-\>[.][@{}l@{}]\<[288I]%
+\>[.][@{}l@{}]\<[287I]%
 \>[9]\AgdaFunction{curry∗}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ex}\AgdaSpace{}%
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
@@ -537,3 +538,128 @@ To test our definitions we compose client and server in parallel
 \end{code}
 and then ask Agda to normalize \AgdaFunction{Main}, which yields
 \AgdaFunction{True} as expected.
+
+\begin{remark}
+    Writing processes in Agda would be easier if we could avoid using
+    \AgdaFunction{curry∗}, namely if the constructors of the data type
+    \AgdaDatatype{Proc} were naturally curried.
+    %
+    This is possible, but only if we are willing to sacrifice some clarity. To
+    illustrate the problem with an example, below is the fully curried
+    constructor \AgdaInductiveConstructor{fork} of a hypothetical data type
+    \AgdaDatatype{Proc'}, obtained by expanding the definition of separating
+    conjunction:
+\begin{code}[hide]%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Proc'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Context}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitive{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\end{code}
+\begin{code}%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaInductiveConstructor{fork}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[343I]\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaBound{Θ}\AgdaSpace{}%
+\AgdaBound{Θ₁}\AgdaSpace{}%
+\AgdaBound{Θ₂}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Ch}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⊗}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
+\AgdaBound{Θ}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[.][@{}l@{}]\<[343I]%
+\>[9]\AgdaDatatype{Proc'}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{Θ₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{Θ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
+\AgdaBound{Θ₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
+\AgdaBound{Θ₂}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Proc'}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{Θ₂}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Proc'}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⊗}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSymbol{)}\<%
+\end{code}
+
+    This version of \AgdaInductiveConstructor{fork} is way less readable than
+    the one we gave in \Cref{sec:process-agda} because of the (now visible)
+    context splittings. We can recover some clarity and still obtain a curried
+    version of \AgdaInductiveConstructor{fork} using the magic wand instead of
+    Agda's native arrow:
+\begin{code}[hide]%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Proc''}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Context}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitive{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\end{code}
+\begin{code}%
+\>[0][@{}l@{\AgdaIndent{1}}]%
+\>[2]\AgdaInductiveConstructor{fork}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[391I]\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[.][@{}l@{}]\<[391I]%
+\>[9]\AgdaFunction{∀[}\AgdaSpace{}%
+\AgdaDatatype{Ch}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⊗}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊢}}\AgdaSpace{}%
+\AgdaDatatype{Proc''}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{─∗}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊢}}\AgdaSpace{}%
+\AgdaDatatype{Proc''}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{─∗}}\AgdaSpace{}%
+\AgdaDatatype{Proc''}\AgdaSpace{}%
+\AgdaFunction{]}\<%
+\end{code}
+
+    However, now in each constructor we have to make a distinction between the
+    first arrow \AgdaFunction{⇒} and the following magic wands \AgdaFunction{─∗}
+    to account for the appropriate amount of context splittings. We found this
+    formulation of the constructors harder to explain and motivate in
+    \Cref{sec:process-agda}.
+    %
+    In the end, none of the alternative definitions of the data type
+    \AgdaDatatype{Proc} was fully satisfactory and we preferred the cleanest and
+    most readable version at the expense of additional clutter in this section.
+    %
+    \eoe
+\end{remark}
