--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -6,40 +6,41 @@ closely related to the linear $\pi$-calculus~\cite{KobayashiPierceTurner99} and
 supported by the same type system of \CP~\cite{Wadler14}. Binary sessions can be
 modeled in \LCC using the continuation-passing encoding described by
 \citet[extended version]{Kobayashi02b} and \citet{DardhaGiachinoSangiorgi17}.
-%
-Under the assumption that the size of a formalisation is a good measure of its
-complexity, the formalisation of \LCC qualifies as the simplest compared to the
-existing ones. This result should also be weighed considering the richness of
-\LCC in terms of supported features and provable properties.
 
-Our work casts some doubts on the actual contribution of context splitting to
-the complexity of a formalisation and hints instead at explicit continuations in
-the underlying model as a simplifying factor.
-%
-It is quite remarkable that, among the alternative approaches that have been
-proposed to avoid context splitting, the one of \citet{SanoKavanaghPientka23}
-based on linearity predicates makes use of explicit continuations.
-
-The calculus of linear continuations and the calculus described in the linearity
-challenge~\cite{CarboneEtAl24} are incomparable in terms of expressiveness. On
-the one hand, the challenge only considers a minimal calculus of first-order,
-monomorphic sessions while \LCC is a fully-fledged calculus that supports
-linear, shared, higher-order, polymorphic channels. On the other hand, the
-logical foundations of \LCC prevent the modeling of deadlocked processes and of
-sequential processes that own both endpoints of a session. These processes can
-be modeled in the calculus of the challenge, where parallel composition and name
-restriction are distinct constructs as in the $\pi$-calculus.
+The linear calculus of continuations and the calculus described in the linearity
+challenge~\cite{CarboneEtAl24} are incomparable in terms of expressiveness. The
+challenge only considers a minimal calculus of first-order, monomorphic sessions
+while \LCC supports linear, shared, higher-order, polymorphic channels. At the
+same time, the logical foundations of \LCC prevent the modeling of deadlocked
+processes, of sequential processes that own both endpoints of a session and in
+general of cyclic network topologies. Such processes can be modeled in the
+calculus of the challenge, where parallel composition and name restriction are
+distinct constructs as in the $\pi$-calculus.
 %
 Because of its logical foundations, we think that \LCC deserves its own space in
 the context of the linearity challenge alongside with (but not in substitution
 of) more traditional session calculi.
 
-The simple formalisation of \LCC is a good starting point for further
+Considering the richness of \LCC in terms of features and proved properties, the
+small (and possibly simple) formalisation of \LCC casts some doubts on the
+actual role of context splitting as a source of unnecessary complexity. We
+perceive far greater benefits from the adoption of a model with explicit
+continuations and we find hints of this also beyond our work.
+%
+Among the alternative approaches that have been proposed to overcome the
+difficulties of context splitting, the one of \citet{SanoKavanaghPientka23}
+makes use of explicit continuations.
+%
+In a different setting, the continuation-based encoding of binary sessions has
+greatly simplified the problem of session type reconstruction~\cite{Padovani17}.
+
+The compact formalisation of \LCC is a good starting point for further
 developments. We have already extended \LCC with support for infinite types and
 recursive processes (the source code of this extension is publicly available in
-the same repository as the one that contains the formalisation of \LCC~\cite{PadovaniRaffaelli25}). In the
-future, it would be interesting to formalise the strong normalisation property
-of \LCC as a consequence of cut elimination of classical linear logic.
+the same repository as the one that contains the formalisation of
+\LCC~\cite{PadovaniRaffaelli25}). In the future, it would be interesting to
+formalise the strong normalisation property of \LCC as a consequence of cut
+elimination of classical linear logic.
 
 In this work we have focused on models and theories of \emph{binary sessions}
 (those connecting exactly two processes), but there are also formalisations of
