--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -35,15 +35,15 @@ In a different setting, the continuation-based encoding of binary sessions has
 greatly simplified the problem of session type reconstruction~\cite{Padovani17}.
 
 The compact formalisation of \LCC is a good starting point for further
-developments. We have already extended \LCC with support for infinite types and
-recursive processes (the source code of this extension is publicly available in
-the same repository as the one that contains the formalisation of
+developments. We have already extended \LCC with support for coinductive (\ie
+possibly infinite) types and recursive processes (the source code of this
+extension is publicly available in the same repository of
 \LCC~\cite{PadovaniRaffaelli25}). In the future, it would be interesting to
 formalise the strong normalisation property of \LCC as a consequence of cut
 elimination of classical linear logic.
 
-In this work we have focused on models and theories of \emph{binary sessions}
-(those connecting exactly two processes), but there are also formalisations of
+In this work we have focused on models of \emph{binary sessions} (those
+connecting exactly two processes), but there are also formalisations of
 \emph{multiparty sessions}, notably those by \citet{JacobsBalzerKrebbers22a} and
 \citet{TiroreBengstonCarbone25}, which can be significantly more complex than
 those of binary sessions. The formalisation by \citet{JacobsBalzerKrebbers22a}
