--- a/paper/main.tex
+++ b/paper/main.tex
@@ -83,7 +83,7 @@
 
 \begin{document}
 
-\title{A Linear Solution of the Linearity Challenge}
+\title{A Simple Solution of the Linearity Challenge}
 
 %%=============================================================%%
 %% GivenName	-> \fnm{Joergen W.}
