--- a/paper/Examples.lagda.tex
+++ b/paper/Examples.lagda.tex
@@ -141,15 +141,13 @@ and then ask Agda to normalize \AgdaFunction{Main}, which yields
 \AgdaFunction{True} as expected.
 
 \begin{remark}
-    Writing processes in Agda would be easier if we could avoid using
-    \AgdaFunction{curry∗}, namely if the constructors of the data type
-    \AgdaDatatype{Proc} were naturally curried.
+    Writing processes in Agda would be more pleasant if the constructors of the
+    data type \AgdaDatatype{Proc} were naturally curried, instead of currying
+    them on demand with \AgdaFunction{curry∗} as we do here.
     %
-    This is possible, but only if we are willing to sacrifice some clarity. To
-    illustrate the problem with an example, below is the fully curried
-    constructor \AgdaInductiveConstructor{fork} of a hypothetical data type
-    \AgdaDatatype{Proc'}, obtained by expanding the definition of separating
-    conjunction:
+    Below is the naturally curried constructor \AgdaInductiveConstructor{fork}
+    of a hypothetical data type \AgdaDatatype{Proc'}, obtained by expanding the
+    definition of separating conjunction:
 \begin{code}[hide]
 data Proc' : Context → Set where
 \end{code}
@@ -158,11 +156,11 @@ data Proc' : Context → Set where
          Proc' (A ∷ Θ₁) → Θ ≃ Θ₁ + Θ₂ → Proc' (B ∷ Θ₂) → Proc' (A ⊗ B ∷ Γ)
 \end{code}
 
-    This version of \AgdaInductiveConstructor{fork} is way less readable than
-    the one we gave in \Cref{sec:process-agda} because of the (now visible)
-    context splittings. We can recover some clarity and still obtain a curried
-    version of \AgdaInductiveConstructor{fork} using the magic wand instead of
-    Agda's native arrow:
+    This version of \AgdaInductiveConstructor{fork} is fully curried, but also
+    less readable than the one we gave in \Cref{sec:process-agda} because of the
+    (now visible) context splittings. We can recover some clarity and still
+    obtain a curried version of \AgdaInductiveConstructor{fork} using
+    (literally) the magic wand:
 \begin{code}[hide]
 data Proc'' : Context → Set where
 \end{code}
@@ -171,14 +169,14 @@ data Proc'' : Context → Set where
          ∀[ Ch (A ⊗ B) ⇒ (A ∷_) ⊢ Proc'' ─∗ (B ∷_) ⊢ Proc'' ─∗ Proc'' ]
 \end{code}
 
-    However, now we have to make a distinction between the first arrow
-    \AgdaFunction{⇒} and the following magic wands to account for the
-    appropriate amount of context splittings. We found this formulation of the
-    constructors harder to explain and motivate in \Cref{sec:process-agda}.
+    However, the first arrow must be a plain implication \AgdaFunction{⇒} and
+    not a magic wand to account for the appropriate amount of context
+    splittings. We found this formulation of the constructors harder to explain
+    and motivate in \Cref{sec:process-agda}.
     %
     Since none of the alternative definitions of \AgdaDatatype{Proc} was fully
-    satisfactory, we preferred the cleanest and most readable version of the
-    data type at the expense of additional clutter in this section.
+    satisfactory, we preferred the most elegant version of the data type at the
+    expense of additional clutter in this section.
     %
     \eoe
 \end{remark}
