--- a/paper/main.tex
+++ b/paper/main.tex
@@ -83,7 +83,7 @@
 
 \begin{document}
 
-\title{A Simple Solution of the Linearity Challenge}
+\title{A Simple Continuation-Based Solution\break of the Linearity Challenge}
 
 %%=============================================================%%
 %% GivenName	-> \fnm{Joergen W.}
@@ -120,7 +120,7 @@
 % 
 % \textbf{Conclusion:} The abstract serves both as a general introduction to the topic and as a brief, non-technical summary of the main results and their implications. The abstract must not include subheadings (unless expressly permitted in the journal's Instructions to Authors), equations or citations. As a guide the abstract should not exceed 200 words. Most journals do not set a hard limit however authors are advised to check the author instructions for the journal they are submitting to.}
 
-\keywords{session types, linear logic, deadlock freedom, Agda}
+\keywords{session types, linear logic, continuations, deadlock freedom, Agda}
 
 %%\pacs[JEL Classification]{D8, H51}
 
